# rustTesteBase64

./: Cargo.toml  Dockerfile  fly.toml
src/: main.rs
src/routes/: mod.rs  upload_csv.rs  upload_img.rs
