[package]
name = "mockserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde_json = "1.0.96"
serde = { version = "1.0.164", features = ["derive"]}
actix-cors = "0.6.4"
actix-multipart = "0.6.0"
mime = "0.3.17"
futures-util = "0.3.28"
base64 = "0.21.2"
uuid = { version = "1.2.2", features = ["fast-rng", "v4"] }
tokio = { version = "1.24.1", features = ["fs"] }
csv = "1.2.2"
reqwest = "0.11.18"
env_logger = "0.10.0"

